# marginmaker

./: .gitignore  README.md  main2.py  marginmaker.py  pyproject.toml  test.py
exp/: boxes.py  broken_test.py  lambda.py  nnn.py  pypy.py  remove_page.py  test.py  testbox.py  window.py
myapp/src/myapp/: __init__.py
src/: gui.hy  gui.py  open.py  pagebox.py  remove_page_margins.py  scale.py
