[project]
name = "marginmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bython-prushton>=1.3.3",
    "hy>=1.3.0",
    "magic-codec>=0.0.1",
    "pikepdf>=10.10.0",
    "pypdf>=6.14.2",
    "tkinterdnd2>=0.6.2",
]

[tool.ruff.format]
indent-style = "tab"